Update package.lock jsons...
...and install Blueprint.js

--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
   "bugs": {
     "url": "https://github.com/simcard0000/wec-spring-2020/issues"
   },
-  "homepage": "https://github.com/simcard0000/wec-spring-2020#readme"
+  "homepage": "https://github.com/simcard0000/wec-spring-2020#readme",
+  "dependencies": {}
 }
